feat: se agrega controlador de resolucion completa
